--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -184,7 +184,7 @@ Explorez mon portfolio pour découvrir mes réalisations et n'hésitez pas à me
                 <div class="card card-sm" style="background-color: hsl(76, 39%, 72%)">
 
                   <div class="card-media">
-                    <ion-icon name="logo-php"></ion-icon>
+                    <ion-icon name=""></ion-icon>
                   </div>
 
                   <h2 class="card-title">PHP</h2>
@@ -196,7 +196,7 @@ Explorez mon portfolio pour découvrir mes réalisations et n'hésitez pas à me
                 <div class="card card-sm" style="background-color: hsl(245, 100%, 90%)">
 
                   <div class="card-media">
-                    <ion-icon name="logo-java"></ion-icon>
+                    <ion-icon name=""></ion-icon>
                   </div>
 
                   <h2 class="card-title">Java</h2>
@@ -220,7 +220,7 @@ Explorez mon portfolio pour découvrir mes réalisations et n'hésitez pas à me
                 <div class="card card-sm" style="background-color: hsl(245, 100%, 90%)">
 
                   <div class="card-media">
-                    <ion-icon name="logo-sql"></ion-icon>
+                    <ion-icon name=""></ion-icon>
                   </div>
 
                   <h2 class="card-title">SQL</h2>
